test/scc/pp/errors/016.a
016.t:2:3: error: '#' is not expected here